manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: demo
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      name: demo
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: host.docker.internal:8082/demo:linux-v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7081
              protocol: TCP
      restartPolicy: Always
